--- a/css/style.css
+++ b/css/style.css
@@ -138,9 +138,47 @@ h3 {
     margin-bottom: 1em;
 }
 
-/*REMOVE THIS!!!  - nav none is ONLY TEMPORARY!!!  */
+/*Header */
 
-nav {display: none;}
+header {
+    display: flex;
+    justify-content: space-between;
+    padding: 1em;
+}
+
+.logo {
+    max-width: 150px;
+}
+
+.nav {
+    position: fixed;
+    background: var(--clr-dark);
+    color: var(--clr-light);
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    z-index: 100;
+
+    transform: translateX(100%);
+    transition: transform 250ms cubic-bezier(.5, 0, .5, 1);
+}
+
+.nav__list {
+    list-style: none;
+    display: flex;
+    height: 100%;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    margin: 0;
+    padding: 0;
+}
+
+.nav__link {
+    color: white;
+}
+
 
 /*Intro Section */
 
@@ -297,3 +335,46 @@ nav {display: none;}
     opacity: .75;
 }
 
+/*Footer*/
+
+.footer {
+    background: #111;
+    color: white;
+    text-align: center;
+    padding: 2.5em 0;
+    font-size: var(--fs-h3);    
+}
+
+.footer a {
+    color: inherit;
+    text-decoration: none;
+}
+
+.footer__link {
+    font-weight: var(--fw-bold);
+}
+
+.footer__link:hover,
+.social-list__link:hover {
+    opacity: .7;
+}
+
+.footer__link:hover {
+    text-decoration: underline;
+}
+
+.social-list {
+    list-style: none;
+    display: flex;
+    justify-content: center;
+    margin: 2em 0 0;
+    padding: 0;
+}
+
+.social-list__item {
+    margin: 0 .5em;
+}
+
+.social-list__link {
+    padding: .5em;
+}
