further updates and deletes

--- a/css/style.css
+++ b/css/style.css
@@ -59,15 +59,10 @@ strong {
     font-weight: var(--fw-bold);
 }
 
-/* :focus {
-    outline: 3px solid;
-    color: white;
-    outline-offset: 3px;
-} */
 
 /*Button*/
 
-.btn {
+/*.btn {
     display: inline-block;
     padding: .5em 1.5em;
     background: blue;
@@ -80,6 +75,23 @@ strong {
     font-weight: var(--fw-bold);
     transition: transform 200ms ease-in-out;
     margin-top: 10px;
+    margin-bottom: 5px;
+}*/
+
+.btn {
+    height: 35px;
+    padding: .5em 1.5em;
+    background: blue;
+    color: white;
+    text-decoration: none;
+    cursor: pointer;
+    font-size: .8rem;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+    font-weight: var(--fw-bold);
+    transition: transform 200ms ease-in-out;
+    margin-top: 10px;
+    margin-bottom: 5px;
 }
 
 .btn:hover {
@@ -150,35 +162,6 @@ header {
     max-width: 150px;
 }
 
-.nav {
-    position: fixed;
-    background: var(--clr-dark);
-    color: var(--clr-light);
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    z-index: 100;
-
-    transform: translateX(100%);
-    transition: transform 250ms cubic-bezier(.5, 0, .5, 1);
-}
-
-.nav__list {
-    list-style: none;
-    display: flex;
-    height: 100%;
-    flex-direction: column;
-    justify-content: space-evenly;
-    align-items: center;
-    margin: 0;
-    padding: 0;
-}
-
-.nav__link {
-    color: white;
-}
-
 
 /*Intro Section */
 
@@ -223,13 +206,9 @@ header {
 .my-services {
     background-color: var(--clr-dark);
     color: var(--clr-light);
-    /*background-image: url(https://www.rubrik.com/wp-content/uploads/2017/02/Distributed-Network-780x400-c-default.jpg);*/
-    /*background-image: url(https://ak0.picdn.net/shutterstock/videos/1012305950/thumb/1.jpg);*/
-    /*background-image: url(https://cdn4.vectorstock.com/i/1000x1000/22/63/cyberspace-stream-of-blue-binary-code-futuristic-vector-18662263.jpg);*/
     background-image: url(https://image.freepik.com/free-vector/blue-binary-code-cyber-future-technology_42077-426.jpg);
     background-size: cover;
     background-blend-mode: multiply;
-    /* text-align: center; */
 }
 
 .section__title--services {
@@ -252,48 +231,9 @@ header {
         max-width: 1000px;
         margin: 0 auto;
     }
-
-    /* .service + .service {
-        margin-left: 2em;
-    } */
 }
 
-/*Who I am */
 
-.about-me {
-    max-width: 1000px;
-    margin: 0 auto;
-}
-
-.about-me__img {
-    box-shadow: var(--bs);
-}
-
-@media (min-width: 600px) {
-    .about-me {
-        display: grid;
-        grid-template-columns: 1fr 200px;
-        grid-template-areas: 
-            "title img"
-            "subtitle img"
-            "text img";
-        grid-column-gap: 2em;
-    }
-
-    .section__subtitle--about {
-        grid-column: title;
-    }
-
-    .about-me__img {
-        grid-area: img;
-    }
-}
-
-.section__subtitle--about {
-    background-image: url(https://image.freepik.com/free-vector/blue-cyber-binary-code-future-technology_42077-302.jpg);
-    background-blend-mode: lighten;
-    color: white;
-}
 
 .additional-services {
     display: grid;
