thursday night wrap

--- a/css/style.css
+++ b/css/style.css
@@ -62,26 +62,10 @@ strong {
 
 /*Button*/
 
-/*.btn {
-    display: inline-block;
-    padding: .5em 1.5em;
-    background: blue;
-    color: white;
-    text-decoration: none;
-    cursor: pointer;
-    font-size: .8rem;
-    text-transform: uppercase;
-    letter-spacing: 2px;
-    font-weight: var(--fw-bold);
-    transition: transform 200ms ease-in-out;
-    margin-top: 10px;
-    margin-bottom: 5px;
-}*/
-
 .btn {
     height: 35px;
     padding: .5em 1.5em;
-    background: blue;
+    background: #06345C;
     color: white;
     text-decoration: none;
     cursor: pointer;
@@ -129,6 +113,7 @@ h3 {
 
 .section__title--intro strong {
     display: block;
+    color: #06345C;
 }
 
 .section__subtitle {
@@ -247,7 +232,7 @@ header {
 /*My Work / Portfolio */
 
 .my-work {
-    background-color: var(--clr-dark);
+    /* background-color: var(--clr-dark); */
     color: var(--clr-light);
     text-align: center;
 }
@@ -261,6 +246,7 @@ header {
 
 .portfolio__item {
     overflow: hidden;
+    margin-bottom: 15px;
 }
 
 .portfolio__img {
@@ -268,6 +254,8 @@ header {
         transform 750ms cubic-bezier(.5, 0, .5, 1), 
         opacity 250ms linear;
         background: white;
+        margin-left: 15px;
+        margin-right: 15px;
 }
 
 .portfolio__img:hover {
@@ -275,11 +263,38 @@ header {
     opacity: .75;
 }
 
+
+.btn-portfolio {
+        height: 25px;
+        padding: .25em 1em;
+        background: red;
+        color: white;
+        text-decoration: none;
+        cursor: pointer;
+        font-size: .8rem;
+        text-transform: uppercase;
+        margin-top: 10px;
+        margin-bottom: 5px;
+}
+
+.btn2-portfolio {
+    height: 25px;
+    padding: .25em 1em;
+    background: blue;
+    color: white;
+    text-decoration: none;
+    cursor: pointer;
+    font-size: .8rem;
+    text-transform: uppercase;
+    margin-top: 10px;
+    margin-bottom: 5px;
+}
+
 /*Footer*/
 
 .footer {
-    background: #111;
-    color: white;
+    background: white;
+    color: #06345C;
     text-align: center;
     padding: 2.5em 0;
     font-size: var(--fs-h3);    
